--- a/examples/package.json
+++ b/examples/package.json
@@ -16,7 +16,8 @@
     "@tanstack/react-query-devtools": "^5.24.0",
     "ky": "^1.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12"
   },
   "devDependencies": {
     "@jihchi/vite-plugin-rescript": "^5.5.0",
